[build-system]
build-backend = "flit.buildapi"
requires = ["flit"]

[tool.flit.metadata]
module = "ScanLHA"
author = "Martin Gabelmann"
author-email = "martin@gabelmann.biz"
home-page = "https://github.com/martingabelmann/ScanLHA.git"
classifiers = ["License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"]
requires = ["matplotlib",
"PyYAML"]
description-file = "README.md"

[tool.flit.scripts]
ScanLHA      = "ScanLHA.ScanLHA:main"
PlotLHA      = "ScanLHA.PlotLHA:main"
